manifests/whoami/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ssl-redirect
  namespace: whoami
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  namespace: whoami
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: whoami-ssl-redirect@kubernetescrd
spec:
  ingressClassName: traefik-public
  rules:
    - host: whoami.szp15.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  name: web
  tls:
    - hosts:
        - whoami.szp15.com
      secretName: tls-whoami-ingress-http
